# factorscope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: case_study.ipynb  fama_french_demo.ipynb  quickstart.py
src/factorscope/: __init__.py  _types.py  alignment.py  decomposition.py  identifiability.py  labeling.py  model.py  plotting.py  reference.py  rotation.py  selection.py  stability.py  target.py
tests/: test_edge_cases.py  test_model.py  test_plotting.py  test_rotation.py  test_target.py
