[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorscope"
version = "0.1.0"
description = "Interpret, label, and trust statistical (PCA) risk factors — time-structure rotation (SOBI) with identifiability guardrails."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mattecammel", email = "mattecammel@gmail.com" }]
keywords = [
    "finance", "quant", "factor model", "risk model", "PCA", "ICA", "SOBI",
    "blind source separation", "statistical risk model", "factor rotation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["numpy>=1.21", "scipy>=1.7", "pandas>=1.3"]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/mattecammel/factorscope"
Issues = "https://github.com/mattecammel/factorscope/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/factorscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
